Connect the installation and relnotes pages to the 9.3R build.
Approved by:	re (implicit)
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45087 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
@@ -10,6 +10,8 @@
 DOCS=	schedule.xml \
 	todo.xml
 
-DATA=	docbook.css
+DATA=	docbook.css \
+	installation.html \
+	relnotes.html
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
