README.mirror is out of date, and not linked to from anywhere.  Remove.
git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45168 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/internal/Makefile
+++ b/en_US.ISO8859-1/htdocs/internal/Makefile
@@ -47,6 +47,6 @@ homepage.html:  homepage.inc
 CLEANFILES+=	homepage.inc
 .endif
 
-DATA+=	README.mirror ssh-keys.asc
+DATA+=	ssh-keys.asc
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
