Connect the 9.3R errata.html, hardware.html, and readme.html pages to the build.
Approved by:	re (implicit)
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45227 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
@@ -11,7 +11,10 @@ DOCS=	schedule.xml \
 	todo.xml
 
 DATA=	docbook.css \
+	errata.html \
+	hardware.html \
 	installation.html \
+	readme.html \
 	relnotes.html
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
