Connect the April-June 2014 report to the build.
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45254 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/news/status/Makefile
+++ b/en_US.ISO8859-1/htdocs/news/status/Makefile
@@ -65,6 +65,7 @@ XMLDOCS+=	report-2013-07-2013-09
 XMLDOCS+=	report-2013-09-devsummit
 XMLDOCS+=	report-2013-10-2013-12
 XMLDOCS+=	report-2014-01-2014-03
+XMLDOCS+=	report-2014-04-2014-06
 
 XSLT.DEFAULT=	report.xsl
 
