--- a/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/9.3R/Makefile
@@ -7,10 +7,12 @@
 .include "../Makefile.inc"
 .endif
 
-DOCS=	schedule.xml \
+DOCS=	announce.xml \
+	schedule.xml \
 	todo.xml
 
-DATA=	docbook.css \
+DATA=	announce.asc \
+	docbook.css \
 	errata.html \
 	hardware.html \
 	installation.html \
