--- a/.arcconfig
+++ b/.arcconfig
@@ -1,5 +1,5 @@
 {
 	"project.name": "D",
-	"phabricator.uri" : "https://phabric.freebsd.org/",
+	"phabricator.uri" : "https://reviews.freebsd.org/",
 	"history.immutable" : true
 }
