Finally commit the rewritten ZFS section as a new chapter.  This greatly expands the original content, mostly due to the work of Allan Jude.
git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45602 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/Makefile
+++ b/en_US.ISO8859-1/books/handbook/Makefile
@@ -245,6 +245,7 @@ SRCS+= desktop/chapter.xml
 SRCS+= disks/chapter.xml
 SRCS+= eresources/chapter.xml
 SRCS+= firewalls/chapter.xml
+SRCS+= zfs/chapter.xml
 SRCS+= filesystems/chapter.xml
 SRCS+= geom/chapter.xml
 SRCS+= install/chapter.xml
