--- a/en_US.ISO8859-1/htdocs/releases/10.1R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/10.1R/Makefile
@@ -10,6 +10,10 @@
 DOCS=	schedule.xml \
 	todo.xml
 
-DATA=	docbook.css
+DATA=	docbook.css \
+	errata.html \
+	hardware.html \
+	readme.html \
+	relnotes.html
 
 .include "${DOC_PREFIX}/share/mk/web.site.mk"
