--- a/ja_JP.eucJP/htdocs/Makefile
+++ b/ja_JP.eucJP/htdocs/Makefile
@@ -1,6 +1,6 @@
 # $FreeBSD$
 # The FreeBSD Japanese Documentation Project
-# Original revision: r41060
+# Original revision: r45723
 
 .if exists(../Makefile.conf)
 .include "../Makefile.conf"
@@ -27,6 +27,7 @@ DOCS+= send-pr.xml
 DOCS+= support.xml
 DOCS+= where.xml
 #DOCS+= 4xx.xml
+#DOCS+= 5xx.xml
 
 # Japanese-only file
 DOCS+= jabout.xml
@@ -47,7 +48,6 @@ DEPENDSET.community=usergroups events
 #DATA=	favicon.ico
 DATA+=	freebsd.css
 #DATA+=	google6bb24ed0b804d5e9.html
-#DATA+=	index.css
 #DATA+=	robots.txt
 
 # Subdirectories
