- Merge the following from the English version:
	r45188 -> r45602	head/ja_JP.eucJP/books/handbook/Makefile
	r45188 -> r45602	head/ja_JP.eucJP/books/handbook/chapters.ent


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45877 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/ja_JP.eucJP/books/handbook/Makefile
+++ b/ja_JP.eucJP/books/handbook/Makefile
@@ -3,7 +3,7 @@
 #
 # Build the FreeBSD Handbook (Japanese).
 #
-# Original revision: r45188
+# Original revision: r45602
 #
 
 # ------------------------------------------------------------------------
@@ -248,6 +248,7 @@ SRCS+= desktop/chapter.xml
 SRCS+= disks/chapter.xml
 SRCS+= eresources/chapter.xml
 #SRCS+= firewalls/chapter.xml
+#SRCS+= zfs/chapter.xml
 #SRCS+= filesystems/chapter.xml
 #SRCS+= geom/chapter.xml
 SRCS+= install/chapter.xml
