--- a/en_US.ISO8859-1/htdocs/releases/10.1R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/10.1R/Makefile
@@ -10,7 +10,8 @@
 DOCS=	schedule.xml \
 	todo.xml
 
-DATA=	docbook.css \
+DATA=	installation.html \
+	docbook.css \
 	errata.html \
 	hardware.html \
 	readme.html \
