Connect announce.xml and announce.asc to the build.
Approved by:	re (implicit)
Sponsored by:	The FreeBSD Foundation


git-svn-id: svn+ssh://svn.freebsd.org/doc/head@45983 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/10.1R/Makefile
+++ b/en_US.ISO8859-1/htdocs/releases/10.1R/Makefile
@@ -7,10 +7,12 @@
 .include "../Makefile.inc"
 .endif
 
-DOCS=	schedule.xml \
+DOCS=	announce.xml \
+	schedule.xml \
 	todo.xml
 
-DATA=	installation.html \
+DATA=	announce.asc \
+	installation.html \
 	docbook.css \
 	errata.html \
 	hardware.html \
